--- a/ListMasterApp/MainPage.xaml
+++ b/ListMasterApp/MainPage.xaml
@@ -13,11 +13,22 @@
                HorizontalOptions="Center" 
                VerticalOptions="CenterAndExpand"/>
         
+        <Entry Placeholder="Digite aqui..."
+               x:Name="valor_digitado"/>
+        
+        <Button Text="Adicionar do Campo"
+                FontSize="30"
+                TextColor="Lime"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand"
+                Margin="20, 10, 20, 20"
+                BackgroundColor="Olive"
+                Clicked="Handle_Clicked"/>
+                
         <Button Text="Adicionar Item"
                 HorizontalOptions="Center"
                 VerticalOptions="CenterAndExpand"
                 Clicked="AddItem"/>
-                
         
         <Button Text="Checar Lista"
                 HorizontalOptions="Center"
